@@ -81,6 +81,7 @@ dpkg (1.17.2) UNRELEASED; urgency=low
     we might get us to read garbage from memory or segfault.
   * Add new symlink_to_dir command to dpkg-maintscript-helper. Closes: #720712
     Based on a patch by Bastien ROUCARIÈS <roucaries.bastien@gmail.com>.
+  * Add new dir_to_symlink command to dpkg-maintscript-helper. Closes: #583585
 
   [ Updated programs translations ]
   * German (Sven Joachim).
